<resources>
    <string name="app_name" translatable="false">CircolApp</string>
    <string name="title_circular_letters">Circular letters</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_reminders">Reminders</string>
    <string name="title_settings">Settings</string>
    <string name="title_intro">Welcome to Circolapp</string>

    <string name="menu_about">About</string>
    <string name="menu_search">Search</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_mark_all_read">Mark all circulars as read</string>

    <string name="preferences_general_header">General</string>
    <string name="preference_notifications_header">Notifications</string>
    <string name="preferences_school">School</string>
    <string name="preferences_dark_theme">Dark theme</string>
    <string name="preferences_notify_new_circulars">Show notifications</string>
    <string name="preferences_polling">Run checks from this device</string>
    <string name="preferences_poll_interval">Synchronization interval</string>
    <string name="preferences_notify_new_circulars_summary">Show a notification when a new circular is published</string>
    <string name="preferences_polling_summary">Not recommended. Disable this option to use push notifications</string>
    <string name="preferences_poll_interval_summary">How long to wait before checking if new circulars are published</string>

    <string name="notification_title_id">Circular letter number %1$d</string>
    <string name="notification_title_date">Circular published on %1$s</string>
    <string name="notification_summary_title">New circulars published</string>
    <string name="notification_summary">New circulars</string>
    <plurals name="notification_summary_text">
        <item quantity="one">%d new circular</item>
        <item quantity="other">%d new circulars</item>
    </plurals>

    <string name="notification_title_reminder">Reminder</string>

    <string name="channel_name_new">Circular letters</string>
    <string name="channel_description_new">New circulars</string>
    <string name="channel_name_reminder">Reminders</string>
    <string name="channel_description_reminder">Reminder linked with circular letter</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_next">Next</string>
    <string name="dialog_back">Back</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="activity_info_title">About Circolapp</string>
    <string name="activity_info_content">Circular letters are written and published by the school of your choice, and are downloaded directly from public pages of the corresponding website.&lt;br /&gt;
    Those documents are released under the license &lt;a href="https://creativecommons.org/licenses/by-nc-sa/3.0/"&gt; &lt;i&gt;Attribution-NonCommercial-ShareAlike 3.0 Unported (CC BY-NC-SA 3.0)&lt;/i&gt;&lt;/a&gt;</string>
    <string name="activity_info_license">License</string>
    <string name="activity_info_license_description">Circolapp is released under the GPL v3 license (&lt;a href="https://github.com/Matte23/circolapp/blob/master/LICENSE"&gt;https://github.com/Matte23/circolapp/blob/master/LICENSE&lt;/a&gt;):&lt;br /&gt;&lt;br /&gt;
    © 2019 - 2021  Matteo Schiff&lt;br /&gt;This program comes with ABSOLUTELY NO WARRANTY.&lt;br /&gt;This is free software, and you are welcome to redistribute it
    under certain conditions</string>
    <string name="activity_info_source_code">Source code</string>
    <string name="activity_info_source_code_description">The source code can be downloaded from &lt;a href="https://github.com/Matte23/circolapp"&gt;https://github.com/Matte23/circolapp&lt;/a&gt;</string>
    <string name="activity_info_privacy_policy">Privacy policy</string>
    <string name="activity_info_privacy_policy_description">&lt;a href="https://www.iubenda.com/privacy-policy/13230834"&gt;Privacy policy&lt;/a&gt;</string>

    <string name="activity_intro_welcome_description">With Circolapp you can stay updated on the circulars of your school. Viewing and downloading circulars has never been easier</string>
    <string name="activity_intro_school_selection_title">Start by choosing your school</string>
    <string name="activity_intro_school_selection_description">You can change your choice later in the settings</string>
    <string name="activity_intro_school_selection_error">Please select a school</string>
    <string name="activity_intro_school_selection_hint">School</string>

    <string name="activity_intro_legal_text">Circolapp is released under the GPL v3 license. This program comes with ABSOLUTELY NO WARRANTY.&lt;br /&gt; This is free software, and you are welcome to redistribute it
    under certain conditions.&lt;br /&gt;&lt;br /&gt; This application may collect personal data, as specified in this &lt;a href="https://www.iubenda.com/privacy-policy/13230834"&gt;privacy policy&lt;/a&gt;</string>
    <string name="activity_intro_legal_checkbox">I have read and I accept the privacy policy and the license</string>
    <string name="activity_intro_legal_error">You must accept those conditions to use Circolapp</string>

    <string name="activity_intro_last_slide_title">You\'re done</string>
    <string name="activity_intro_last_slide_description">Now you can start using Circolapp</string>

    <string name="dialog_install_pdf_reader_title">PDF reader not found</string>
    <string name="dialog_install_pdf_reader_content">Please install an external application to open circular letters</string>

    <string name="dialog_title_permission_required">Permission required</string>
    <string name="dialog_message_permission_write">We need your permission to save this circular letter to local storage</string>

    <string name="snackbar_write_permission_not_granted">Unable to save this circular letter to local storage. Permission not granted</string>
    <string name="snackbar_circular_downloaded">The circular letter will be saved into the download folder</string>

    <string name="snackbar_connection_not_available">Network not available. Results may be outdated</string>
    <string name="snackbar_generic_error">An error has occurred</string>

    <string name="image_view_attachment">View attachment</string>
    <string name="image_share_attachment">Share attachment</string>
    <string name="image_download_attachment">Download attachment</string>
    <string name="image_view_circular">View circular</string>
    <string name="image_share_circular">Share circular</string>
    <string name="image_download_circular">Download circular</string>
    <string name="image_add_favourite">Add to favourites</string>
    <string name="image_add_reminder">Add reminder</string>
    <string name="image_remove_favourite">Remove from favourites</string>
    <string name="image_remove_reminder">Remove reminder</string>
    <string name="image_expand">Expand</string>
    <string name="image_collapse">Collapse</string>
</resources>
