<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_circular_letters">

    <fragment
        android:id="@+id/navigation_circular_letters"
        android:name="net.underdesk.circolapp.fragments.CircularLetterFragment"
        android:label="@string/title_circular_letters"
        tools:layout="@layout/fragment_circular_letters" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="net.underdesk.circolapp.fragments.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_circular_letters" />

    <fragment
        android:id="@+id/navigation_reminders"
        android:name="net.underdesk.circolapp.fragments.RemindersFragment"
        android:label="@string/title_reminders"
        tools:layout="@layout/fragment_circular_letters" />
</navigation>